Modified the navigation component

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,1 +1,76 @@
-<p>navigation works!</p>
+<div class="container-fluid body">
+
+  <!-- Navigation -->
+
+  <div class="row">
+    <div class="col-md-4">
+
+
+      <div class="row">
+        <div class="col-md-6">
+          <div class="logo">
+            <img src="https://bit.ly/3wN4kGa" alt="" style="height: 100px; border-radius: 100px;">
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <!-- <div class="logo">
+              <img src="https://bit.ly/3wN4kGa"alt="">
+            </div>
+          </div> -->
+        </div>
+
+      </div>
+
+
+    </div>
+    <div class="col-md-4">
+      <div class="row">
+        <div class="col-md-6">
+          <li>
+            <a href="">
+
+              <h3>Quotes</h3>
+
+            </a>
+          </li>
+
+        </div>
+        <div class="col-md-6">
+          <li>
+            <a href="">
+
+              <h3>Create A Quote</h3>
+
+            </a>
+          </li>
+        </div>
+
+      </div>
+
+    </div>
+    <div class="col-md-4">
+
+      <div class="row">
+        <div class="col-md-6">
+
+          <form>
+            <div class="md-form">
+              <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+            </div>
+          </form>
+
+        </div>
+        <div class="col-md-6">
+          <div class="button">
+            <button type="button" class="btn btn-primary">SUBSCRIBE</button>
+
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+
+  </div>
+</div>
