--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -1,1 +1,16 @@
-<p>quotes works!</p>
+<div class="bg-secondary">
+
+  <div>
+
+    <h2>Injustice anywhere is a threat to justice everywhere.</h2>
+
+    <p>Author:</p>
+
+    <p>Publisher:</p>
+
+    <p>Downvotes:</p>
+
+    <p>Date:{{Date}}</p>
+
+  </div>
+</div>
