--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,11 +6,17 @@
 
   </div>
 
+  <div class="quote">
+
+    
+
+  </div>
+
   <div class="row">
 
     <div class="col-md-6">
 
-      <h1>QUOTES</h1>
+      <h1>Inspirational Quotes</h1>
 
       <app-quotes></app-quotes>
 
