modified the background

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,7 @@ h1 {
 }
 body {
 
-  background: url("https://bit.ly/2Td81XY")no-repeat center center;
+  background: url("https://bit.ly/3zcUSgS")no-repeat center center;
   background-size: cover;
   height: auto;
   padding: 50px;
