--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,9 @@ h1 {
 }
 body {
 
-  background: url("https://bit.ly/3zcUSgS")no-repeat center center;
+  /* background: url("https://bit.ly/3zcUSgS")no-repeat center center; */
+  background-color: black;
+  color: green;
   background-size: cover;
   height: auto;
   padding: 50px;
