--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -1,6 +1,6 @@
 <div class="mt-5 p-3">
 
-  <div *ngFor= 'let quote of quotes '>
+  <div *ngFor= 'let quote of sortQuotes let i= index'>
 
     <h2> {{quote.quote}} </h2>
 
