--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -22,8 +22,8 @@
     </div>
 
     <div class="col-md-4">
-    <button ( click )= 'deleteQuote(true)' class="btn btn-danger">DELETE</button>
 
+      <button class="btn btn-danger" id="del" (click)='deleteQuote(true)'>Delete</button>
     </div>
 
   </div>
