modified navigation and body components

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -28,9 +28,9 @@
       <div class="row">
         <div class="col-md-6">
           <li>
-            <a href="">
+            <a href="" class="underline">
 
-              <h3>Quotes</h3>
+              <h3>HOME</h3>
 
             </a>
           </li>
@@ -40,7 +40,7 @@
           <li>
             <a href="">
 
-              <h3>Create A Quote</h3>
+              <h3>ABOUT</h3>
 
             </a>
           </li>
