--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -2,12 +2,12 @@
   <div class="form-group">
     <label for="name">Publisher</label>
     <input type="text" placeholder="Your name here..." required class="form-control" id="name"
-      [(ngModel)]="newQuote.name" name="name" #name='ngModel' minlength="3">
+      [(ngModel)]="newQuote.publisher" name="name" #name='ngModel' minlength="3">
   </div>
   <div class="form-group">
     <label for="description">Quote</label>
     <textarea class="form-control" placeholder="Type quote here..." id="quote" rows="2" required
-      [(ngModel)]="newQuote.quoteInfo" name="quote" #quote='ngModel'></textarea>
+      [(ngModel)]="newQuote.quote" name="quote" #quote='ngModel'></textarea>
 
   </div>
   <div class="form-group">
