--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -1,10 +1,40 @@
-<div class="mt-5 p-3">
+<div class="navigation">
 
-  <div *ngFor= 'let quote of quotes let i= index'>
+  <app-navigation></app-navigation>
 
-    <h2> {{quote.quote}} </h2>
-
-    <app-button *ngIf='quote' bind-quote='quote' (isRead)='quoteDelete($event,i)'>
-    </app-button>
-  </div>
 </div>
+<div class="quote">
+
+  <app-body></app-body>
+
+</div>
+<div class="row">
+
+  <div class="col-md-8">
+
+    <h1>Inspirational Quotes</h1>
+
+    <div class="mt-5 p-3">
+
+      <div *ngFor= 'let quote of quotes let i= index'>
+
+        <h2> {{quote.quote}} </h2>
+
+        <app-button *ngIf='quote' bind-quote='quote' (isRead)='quoteDelete($event,i)'>
+        </app-button>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-4">
+
+    <h1>CREATE QUOTES</h1>
+
+    <app-form (add)="addedQuote($event)"></app-form>
+
+
+  </div>
+
+</div>
+
+
