--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -1,10 +1,9 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap'); */
 
 .container{
   width: 100%;
   height: 300px;
-  background-color: red;
   font-size: 50px;
   padding-top: 50px;
   border-radius: 20px;
