--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
 You can add global styles to this file, and also import other style files
+/* @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap'); */
+
+/* font-family: 'Pacifico', cursive; */
+
 * li{
   text-decoration: none;
   list-style: none;
