Modified button  component

--- a/src/app/button/button.component.css
+++ b/src/app/button/button.component.css
@@ -1,6 +1,13 @@
-p{
+#paragraph{font-size: 15px;
 
 }
-span{
-  
+#span{
+font-size: 30px;
+font-family: 'Great Vibes', cursive;
+
+
 }
+.row{
+  padding-bottom: 25px;
+}
+
