--- a/src/app/button/button.component.css
+++ b/src/app/button/button.component.css
@@ -1,13 +1,18 @@
-#paragraph{font-size: 15px;
+#paragraph{
+  font-size: 20px;
+  font-weight: 900;
 
 }
 #span{
 font-size: 30px;
 font-family: 'Great Vibes', cursive;
+font-weight: 200;
 
 
 }
 .row{
   padding-bottom: 25px;
 }
-
+.btn{
+  width: 200px;
+}
