--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -22,18 +22,18 @@
 
       <div class="col-md-4">
 
-        <button (click)='upvote()'>Upvote</button>
+        <button class="btn btn-outline-success" (click)='upvote()'>Upvote</button>
 
       </div>
 
       <div class="col-md-4">
-        <button (click)='downvote()'>Downvote</button>
+        <button class="btn btn-outline-warning" (click)='downvote()'>Downvote</button>
 
       </div>
 
       <div class="col-md-4">
 
-        <button class="btn btn-danger" id="del" (click)='deleteQuote(true)'>Delete</button>
+        <button class="btn btn-danger " id="del" (click)='deleteQuote(true)'>Delete</button>
       </div>
 
     </div>
