Modified body/navigation/quote copmponents and css components with Quote copmponent

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -30,7 +30,10 @@
           <li>
             <a href="" class="underline">
 
-              <h3>HOME</h3>
+              <!--  -->
+
+              <button type="button" class="btn btn-outline-success">HOME</button>
+
 
             </a>
           </li>
@@ -40,7 +43,7 @@
           <li>
             <a href="">
 
-              <h3>ABOUT</h3>
+              <button type="button" class="btn btn-outline-success">ABOUT</button>
 
             </a>
           </li>
@@ -63,7 +66,7 @@
         </div>
         <div class="col-md-6">
           <div class="button">
-            <button type="button" class="btn btn-primary">SUBSCRIBE</button>
+            <button type="button" class="btn btn-success">SUBSCRIBE</button>
 
           </div>
         </div>
