--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -3,12 +3,13 @@
 
 .container{
   width: 100%;
-  height: 300px;
-  font-size: 50px;
+  height: auto;
+  font-size: 70px;
   padding-top: 50px;
   border-radius: 20px;
 
 }
 p{
   font-family: 'Pacifico', cursive;
+  color: wheat;
 }
