--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -14,7 +14,7 @@
 
     <h1>Inspirational Quotes</h1>
 
-    <div class="mt-5 p-3">
+    <div class="mt-5 wit">
 
       <div *ngFor= 'let quote of quotes let i= index'>
 
